[package]
name = "markup-img"
version = "0.1.0"
edition = "2024"

[lib]
name = "markup_img"
path = "src/lib.rs"

[[bin]]
name = "markup-img"
path = "src/main.rs"

[[bin]]
name = "download-neutralino"
path = "src/bin/download-neutralino.rs"

[dependencies]
tempfile = "3.20.0"
ureq = { version = "3.1.2", default-features = false, features = ["rustls"] }
zip = { version = "4.6.1", default-features = false, features = ["deflate"] }
